Scrollbar issue #168 Add cursor for this All Projects link #181 Add border for userpic

--- a/frontend/src/styles/components/multiselect.scss
+++ b/frontend/src/styles/components/multiselect.scss
@@ -163,6 +163,7 @@ $linkColor: #0099cf;
     overflow: hidden;
     white-space: nowrap;
     font-size: 14px;
+    cursor: pointer;
   }
 }
 
